--- a/app/src/main/res/layout/fragment_detalhes_rota.xml
+++ b/app/src/main/res/layout/fragment_detalhes_rota.xml
@@ -26,7 +26,7 @@
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="12dp"
             android:maxLines="1"
-            android:text="Titulo"
+            tools:text="Titulo"
             android:textAlignment="center"
             android:textColor="@color/branco"
             android:textSize="24sp"
@@ -44,7 +44,7 @@
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="12dp"
             android:maxLines="1"
-            android:text="assinates: 0/0"
+            tools:text="assinates: 0/0"
             android:textAlignment="textStart"
             android:textColor="@color/branco"
             android:textSize="18sp"
