--- a/app/src/main/res/layout/fragment_formulario_assinante.xml
+++ b/app/src/main/res/layout/fragment_formulario_assinante.xml
@@ -18,7 +18,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="16dp"
-            android:hint="Nome"
+            android:hint="@string/nome"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:hint="Endereço"
+            android:hint="@string/endereco"
             app:layout_constraintEnd_toStartOf="@id/fragment_formulario_assinante_numero"
             app:layout_constraintHorizontal_weight="3"
             app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
@@ -38,7 +38,7 @@
             android:id="@+id/fragment_formulario_assinante_numero"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Número"
+            android:hint="@string/numero"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_nome"
             app:layout_constraintHorizontal_weight="1"
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:hint="Bairro"
+            android:hint="@string/bairro"
             app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_numero"
             app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
             app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_endereco" />
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="até"
+            android:text="@string/ate"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/fragment_formulario_assinante_inicio_assinatura"
             app:layout_constraintStart_toEndOf="@id/fragment_formulario_assinante_inicio_assinatura"
@@ -101,7 +101,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/borda_preta"
             android:gravity="start"
-            android:hint="informações complementares"
+            android:hint="@string/complemento"
             android:padding="4dp"
             app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_nome"
             app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
@@ -115,7 +115,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="25dp"
-            android:text="Salvar"
+            android:text="@string/salvar"
             android:textColor="@color/branco"
             app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_complemento"
             app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_complemento"
