--- a/app/src/main/res/layout/item_assinante.xml
+++ b/app/src/main/res/layout/item_assinante.xml
@@ -14,8 +14,7 @@
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@drawable/background_redondo_amarelo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/assinantes_nome"
@@ -77,7 +76,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/lato"
-        android:text="Sem rota vinculada"
+        android:text="@string/sem_rota_vinculada"
         android:textColor="@color/vermelho"
         android:textSize="12sp"
         android:visibility="gone"
