--- a/app/src/main/res/menu/menu_detalhes_rota.xml
+++ b/app/src/main/res/menu/menu_detalhes_rota.xml
@@ -5,12 +5,12 @@
     <item
         android:id="@+id/menu_editar"
         android:icon="@drawable/ic_editar_branco"
-        android:title="Deletar"
+        android:title="@string/editar"
         app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/menu_deletar"
         android:icon="@drawable/ic_delete_branco"
-        android:title="Deletar"
+        android:title="@string/deletar"
         app:showAsAction="always|collapseActionView" />
 </menu>
