--- a/app/src/main/res/menu/menu_formulario_assinante.xml
+++ b/app/src/main/res/menu/menu_formulario_assinante.xml
@@ -5,6 +5,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/menu_deletar"
     android:icon="@drawable/ic_delete_branco"
-    android:title="Deletar"
+    android:title="@string/deletar"
     app:showAsAction="always|collapseActionView" />
 </menu>
